Add event Listeners and completed basics in JS

--- a/Snake game/index.html
+++ b/Snake game/index.html
@@ -26,15 +26,15 @@
 		<!--<div id="mydiv"></div>
 		<div></div>-->
 
-		<canvas id="mycanvas" width=1000px height=1000px></canvas>
+		<canvas id="mycanvas" width=500px height=500px></canvas>
 
 
 
-<!-- 		<script src="practice.js"></script>
- -->	
+		<script src="practice.js"></script>
+	
 
 <!-- 		 <script src="oops.js"></script>
- -->		 <script src="snake.js"></script>
+ 		 <script src="snake.js"></script>-->
 
 		 <p>Game Title</p>
 		 <p>Game Description</p>
